--- a/config/config.json
+++ b/config/config.json
@@ -2,14 +2,14 @@
   "development": {
     "username": "root",
     "password": "password",
-    "database": "passport_demo",
+    "database": "tp_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "password",
-    "database": "database_test",
+    "database": "tp_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
