--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "prettier-semi-cli": "^1.0.0",
     "semistandard": "^16.0.0",
     "snazzy": "^9.0.0"
+  },
+  "semistandard": {
+    "globals": [
+      "$"
+    ]
   }
 }
