--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "snazzy": "^9.0.0"
   },
   "semistandard": {
-    "globals": [
-      "$"
-    ]
+    "globals": ["$"],
+    "extends": "eslint:recommended"
   }
 }
