--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "snazzy": "^9.0.0"
   },
   "semistandard": {
-    "globals": ["$"],
-    "extends": "eslint:recommended"
+    "globals": ["$"]
   }
 }
